wp-content/themes/zenit-theme/assets/styles/layouts/_shop.scss
.woocommerce-error,
.woocommerce-info,
.woocommerce-message {
    border-top-color: black!important;
}

.woocommerce button.button.alt.disabled{
	background-color: black!important;
}

.woocommerce div.product {
    p.price,
    span.price {
        color:#7f7f7f;
        font-size:20px;
        font-weight:700;
        display:block;
        margin-bottom:0;
    }

    .product_title,
    [itemprop=offers] {
        display: none;
    }
}


.bg-overlay {
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: 9999;
    left: 0;
    top: 0;
    background: rgb(0,0,0);
    background: rgba(0,0,0,0.8);
}

.cart-overlay {
    display: none;
    background-color: #ffffff;
    position: fixed;
    left: 50%;
    top: 50%;
    margin: -241px 0 0 -370px;
    padding: 0 30px;
    text-align: center;
    width: 740px;
    z-index: 99;

    .close-message{
        width: 25px;
        height: 25px;
        display: block;
        position: absolute;
        top: 15px;
        right: 5px;
        z-index: 2;
        cursor: pointer;

        &:after,&:before{
            width: 75%;
            height: 2.5px;
            position: absolute;
            transform-origin: center center;
            content: '';
            display: block;
            background-color: black;
            top: 7px;
        }

        &:after{
            transform: rotate(-45deg);
        }

        &:before{
            transform: rotate(45deg);
        }
    }

    .inner-top {
        height: 190px;
        position: relative;
    }

    .woocommerce-message,
    .woocommerce-message-fake {
        background-color: #ffffff;
        border: 0;
        font-family: 'apercu', helvetica, arial, sans-serif;
        font-size: 22px;
        line-height: 24px;
        text-transform: uppercase;
        padding: 30px !important;
        position: initial;

        &:before {
            display: none;
        }

        a.button {
            bottom: 30px;
            font-size: 15px;
            padding: 15px 0;
            position: absolute;
            text-transform: uppercase;
            width: 275px;

            &.wc-forward {
                background-color: #bd9a5c !important;
                color: #fff !important;
                right: 40px;

                &:hover {
                    opacity: 0.4;
                    background-color: #aa7341 !important;
                }
            }

            &.keep-shopping {
                background-color: #fff;
                border: 1px solid #000;
                color: #000;
                left: 40px;

                &:hover {
                    background-color: #000 !important;
                    color: #fff !important;
                    opacity: 0.75;
                }
            }
        }
	}

    .inner-bottom {
        border-top: 1px solid #000;
        padding: 20px 0;

        ul {
            //display: flex;

            li {
                display: inline-block;
                padding: 10px 8px;
            }
        }
    }

    .upsell-title {
        font-family: 'apercu', Helvetica, Arial, sans-serif;
        font-size: 16px;
        font-weight: bold;
        text-transform: uppercase;
    }

    .upsell-wrapper {
        padding-top: 5px;

        .upsell-item {
            width: 166px;

            a {
                color: #000;
                display: block;
            }

            .thumb-wrapper {
                height: 150px;
                width: 150px;

                span {
                    display: inline-block;
                    height: 100%;
                    vertical-align: middle;
                }
            }

            img {
                width: 100%;
            }

            h4 {
                font-family: 'apercu', Helvetica, Arial, sans-serif;
                font-size: 11px;
                font-weight: normal;
                overflow: hidden;
                margin: 10px 0 5px;
                text-transform: none;
            }

            p {
                font-size: 14px;
                font-weight: bold;
                line-height: 14px;
            }
        }
    }
}

.return-to-shop{
	margin-top: 15px;
}

.dd-select{
	padding:0!important;
	background-color:transparent!important;
	border:0!important;
}

.dd-selected{
	padding:0!important;
}

li a.dd-option, .dd-options li{
	margin-right:0!important;
}

body.page-template-page-accueil{
	.dd-options{
		li a{
			color:black!important;
		}
	}
}

.dd-options{
	width:75px!important;
}

.currency-changer{
	transform:translateY(10px);
	.dd-pointer{
		display:none;
	}
}

.dd-select, .dd-option{
	img, .dd-desc{
		display:none;
	}
}

.woocommerce{
	form{
		width:100%;
	}

	input{
		width: auto!important;
		border: 0!important;
		padding: 10px!important;
	}

	table{
		border:0!important;

		th,td{
			padding:20px 0px!important;
		}

        th.product-price {
            width: 100px;
        }

        th.product-quantity {
            text-align: center;
            width: 100px;
        }

        th.product-subtotal {
            width: 80px;
        }
	}

	#coupon_code{
		margin-right:15px!important;
	}

	.woocommerce-thankyou-order-received{
		margin-bottom:15px;
	}

}

.woocommerce-order-received{
	h2{
		margin-top:80px;
	}
}

.woocommerce #respond input#submit.alt, .woocommerce a.button.alt, .woocommerce button.button.alt, .woocommerce input.button.alt{
	background-color: $brand-primary;

	&:hover{
		background-color:$brand-primary!important;
	}
}

.woocommerce a.remove{
	padding-left:2px;

	&:hover{
		background-color:red!important;
	}
}

.select2-container .select2-choice{
	border-radius: 3px 3px 8px 8px!important;
	border-color: transparent!important;
	background-color: #f3f3f3!important;
}

.select2-search{
	input[type="text"]{
		background-color: white!important;
	    border-top: 1px solid lightgray!important;
	    margin-top: 10px!important;
	    padding:2px 20px!important;
	}
}

.woocommerce-checkout{
	.order_review_heading{
		margin-top:150px;
	}

	input{
		width: 100%!important;
		padding: 10px!important;
	}

	textarea{
		min-height:200px;
	}

	#customer_details{
		margin-top: 45px;
	    border-top: 1px solid #dddddd;
	    padding-top: 45px;
	    border-bottom: 1px solid #dddddd;
	    padding-bottom: 45px;
	    margin-bottom: 45px;
	}

	#order_review{
		table.shop_table{
			th,td{
				border-top:1px solid #f3f3f3!important;
			}
		}
	}

	#payment{
		ul.payment_methods li{
			input{
				float:left;
				width:auto!important;
			}

			label{
				margin-top: -10px;
    			display: block;
			}
		}
	}
}

body.cart,
body.panier {
    .main {
        .page-header {
            display: none;
        }

        .container {
            margin-top: 125px;

            form.woocommerce-shipping-calculator {
                margin-top: 10px;
            }
        }
    }
}

body.no-scroll {
    position: fixed;
    overflow: hidden;
    height: 100%;
    width: 100%;
}

@media (max-width: 858px) {
    .cart-overlay {
        margin-left: -360px;
        padding: 0 20px;
        width: 720px;
    }
}

@media (max-width: 768px) {
	.woocommerce .quantity .qty{
		text-align:right;
	}

	.summary.entry-summary{
		width:100%!important;
	}

	.woocommerce-cart .order-total td{
		padding: 20px!important;
	}

	.woocommerce-cart .coupon{
		padding:0 20px;

		#coupon_code{
			width: 100%!important;
    		margin-bottom: 20px;
		}
	}

	.dd-container,.dd-select{
		width:150px!important;
	}

    input[name="update_cart"]{
        width: 90%!important;
        margin-top: 40px!important;
        margin-left: auto!important;
        margin-right: auto!important;
    }

    .cart-overlay {
        margin: -339px 0 0 -250px;
        padding: 0 20px 10px;
        width: 500px;
        height: 678px;

        .inner-top {
            height: 170px;
        }

        .woocommerce-message,
        .woocommerce-message-fake {
            font-size: 18px;
            line-height: 20px;
            padding-bottom: 20px!important;

            a.button {
                font-size: 13px;
                width: 205px;

                &.wc-forward {
                    right: 15px;
                }

                &.keep-shopping {
                    left: 15px;
                }
            }
        }

        .inner-bottom ul {
            display: block;

            li {
                float: left;
                margin: 0 30px;
            }
        }

        .upsell-wrapper {
            .upsell-item {
                &:nth-child(3),
                &:nth-child(4) {
                    //display: none;
                }
            }
        }
    }
}

@media (max-width: 566px) {
    .cart-overlay {
        margin-left: -200px;
        padding: 0 10px;
        width: 400px;

        .inner-top {
            height: 210px;
        }

        .woocommerce-message,
        .woocommerce-message-fake {
            font-size: 16px;
            line-height: 18px;

            a.button {
                font-size: 14px;
                width: 235px;

                &.wc-forward {
                    right: 72px;
                    bottom: 20px;
                }

                &.keep-shopping {
                    left: 73px;
                    bottom: 75px;
                }
            }
        }

        .inner-bottom ul li {
            margin: 0 10px;
        }
    }
}

@media (max-width: 512px) {
    body.cart,
    body.panier {
        ul#shipping_method li label {
            font-size: 16px;
        }
    }
}

@media (max-width: 480px) {
    .cart-overlay {
        height: 480px;
        margin: -240px 0 0 -150px;
        overflow: scroll;
        width: 300px;

        .close-message {
            top: 10px;
            right: 0;
        }

        .woocommerce-message,
        .woocommerce-message-fake {
            font-size: 14px;
            line-height: 16px;
            padding: 25px 20px 20px 20px!important;

            a.button {
                &.wc-forward {
                    right: 22px;
                }

                &.keep-shopping {
                    left: 23px;
                }
            }
        }

        .inner-top {
            height: 195px;
        }

        .inner-bottom {
            padding: 15px 0 5px;

            ul li {
                margin: 0;
            }
        }

        .upsell-wrapper {
            padding-top: 0;

            .upsell-item {
                width: 140px;

                .thumb-wrapper {
                    height: 124px;
                    width: 124px;
                }
            }
        }
    }
}

